[package]
name = "onqueue"
version = "0.1.0"
edition = "2024"  
authors = ["Mark Wayne Menorca <marcuwynu23@gmail.com>"]
description = "a lightweight, multithreaded task queue runner"
[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
hyper = "1.2"  # ✅ match Axum
chrono = "0.4.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
url = "2.5.4"
